@@ -75,6 +75,9 @@ Bugfixes:
 - Provide the missing wrapper for `MPI_Request_get_status` and properly
   handle the case where the operation hasn't been completed yet.
 - Fix abort of OMPT adapter with nested parallel regions inside of tasks.
+- Enabling the CUDA / HIP adapter together with the OMPT adapter will no
+  longer cause a segmentation fault with LLVM 16.0 and newer when OpenMP
+  offloading flags are used.
 
 ------------------- Released version 8.3 -----------------------------
 
